corrected font size of bar titles on mobile

--- a/index.css
+++ b/index.css
@@ -107,7 +107,7 @@ body {
 
 .bar-title {
 	/*font-weight: bold;*/
-	font-size: 10px;
+	font-size: 3.4vw;
 	margin-top: 8px;
 	display: inline-block;
 }
